Modularize deselection of producers

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -52,8 +52,9 @@ p {
 }
 
 .producer {
-  padding: 2em;
+  padding: 1em;
   color: $darkblue;
+  font-size: 1.5em;
   font-weight: bold;
   text-align: center;
 }
