--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -48,7 +48,7 @@ p {
   height: 100vh;
   background-color: $tan;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
 }
 
 .producer {
@@ -115,6 +115,7 @@ input {
   width: 100px;
   height: auto;
   margin: 5px;
+  z-index: 4;
 }
 
 .key:hover, .key-pressed {
@@ -139,7 +140,7 @@ input {
   color: rgba(255, 255, 255, 0.9);
   font-size: 22px;
   position: absolute;
-  z-index: 2;
+  z-index: 5;
   padding-bottom: 10px;
 }
 
@@ -201,6 +202,79 @@ input:focus {
 
 label {
   color: $darkblue;
+}
+
+.key-row {
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .nav-left {
+    width: 140px;
+  }
+  .producer {
+    font-size: 16px;
+  }
+  .key {
+    width: 50px;
+  }
+  #producer-title {
+    font-size: 20px;
+  }
+  main {
+    margin-left: 140px;
+  }
+  .letter {
+    display: none;
+  }
+
+  .play-btn {
+    margin: 10px;
+  }
+  .key-container {
+    // display: block;
+    margin-top: 10px;
+  }
+
+  .slider-container {
+    width: 150px;
+  }
+  .slider-label {
+    width: 50px;
+  }
+
+  .range {
+    display: block;
+    width: 100px;
+  }
+
+  .block {
+    width: 100px;
+    margin: 0;
+  }
+
+  .custom-range {
+    width: 175px;
+  }
+
+  .player {
+    width: auto;
+    margin: 1em;
+  }
+
+  .center-div {
+    margin: 0 auto;
+  }
+
+  .select {
+    background-color: white;
+    margin: 5px;
+  }
+
+  .key-row {
+    display: block;
+  }
 }
 
 // box-shadow: 3px 3px 7px rgba(15,15,15,0.8);
