--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -116,6 +116,7 @@ input {
   height: auto;
   margin: 5px;
   z-index: 4;
+  // filter: sepia(75%);
 }
 
 .key:hover, .key-pressed {
@@ -128,16 +129,20 @@ input {
   margin-top: 2em;
   display: flex;
   justify-content: center;
+  filter: hue-rotate(110deg);
+    -webkit-filter: hue-rotate(110deg);
 }
 
 .key-div {
   display: flex;
   justify-content: center;
   align-items: center;
+  // background-color: $pink;
+  // z-index: 10;
 }
 
 .letter {
-  color: rgba(255, 255, 255, 0.9);
+  color: white;
   font-size: 22px;
   position: absolute;
   z-index: 5;
