--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -148,7 +148,6 @@ input {
   justify-content: center;
   align-items: center;
   // background-color: $pink;
-  // z-index: 10;
 }
 
 .letter {
@@ -222,6 +221,7 @@ label {
 .key-row {
   display: flex;
   justify-content: center;
+  margin: 0 2em;
 }
 
 @media only screen and (max-width: 600px) {
@@ -275,7 +275,7 @@ label {
 
   .player {
     width: auto;
-    margin: 1em;
+    margin: 0 1em;
   }
 
   .center-div {
