--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -33,6 +33,7 @@ nav {
   background-color: $blue;
   position: fixed;
   top: 0;
+  z-index: 4;
 }
 
 main {
@@ -54,7 +55,7 @@ p {
   width: 250px;
   height: 100vh;
   background-color: $tan;
-  position: fixed;
+  position: absolute;
   // top: 80px;
   z-index: 3;
 }
@@ -161,8 +162,8 @@ p {
   width: 100px;
 }
 
-input {
-  width: 200px;
+.radio {
+  font-size: 20px;
 }
 
 .key {
@@ -266,6 +267,10 @@ label {
   display: flex;
   justify-content: center;
   margin: 0 2em;
+}
+
+.input-width {
+  width: 300px;
 }
 
 @media only screen and (max-width: 600px) {
