Add one shot upload capabilities to all key menus

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -340,6 +340,10 @@ label {
   cursor: pointer;
 }
 
+.oneShot-div {
+  padding-top: 1em;
+}
+
 .loader {
   position: relative;
   filter: hue-rotate(-120deg);
