Add default selection for custom oneShots

--- a/assets/scripts/templates/index-oneShots.handlebars
+++ b/assets/scripts/templates/index-oneShots.handlebars
@@ -1,5 +1,5 @@
 <select class="custom-select oneShot-select select">
-  <option value="">--Choose a Sample--</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonPerc1.wav">--Choose a Sample--</option>
   {{#each oneShots as |oneShot|}}
     <option class="option" value={{oneShot.url}}>{{oneShot.title}}</option>
   {{/each}}
