Reset default custom samples

--- a/assets/scripts/templates/index-d-oneShots.handlebars
+++ b/assets/scripts/templates/index-d-oneShots.handlebars
@@ -1,4 +1,4 @@
-<select class="custom-select d-oneShot-select select">
+<select class="custom-select oneShot-select select">
   {{#each oneShots as |oneShot|}}
     <option class="option" value={{oneShot.url}}>{{oneShot.title}}</option>
   {{/each}}
