--- a/assets/scripts/templates/index-j-oneShots.handlebars
+++ b/assets/scripts/templates/index-j-oneShots.handlebars
@@ -1,4 +1,52 @@
 <select class="custom-select oneShot-select select">
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillKick1.wav">Mr. Bill Kick 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillKick2.wav">Mr. Bill Kick 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillPerc2.wav">Mr. Bill Tom</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillSnare1.wav">Mr. Bill Snare 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillSnare2.wav">Mr. Bill Snare 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillSnare3.wav">Mr. Bill Snare 3</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillSnare4.wav">Mr. Bill Snare 4</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillHat1.wav">Mr. Bill Hat 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillHat2.wav">Mr. Bill Hat 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/MrBill/MrBillPerc1.wav">Mr. Bill Perc 1</option>
+
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalKick1.wav">Pascaal Kick 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalTom.wav">Pascaal Tom</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalSnare1.wav">Pascaal Snare 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalSnare2.wav">Pascaal Snare 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalSnare3.wav">Pascaal Snare 3</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalHat1.wav">Pascaal Hat 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalPerc1.wav">Pascaal Perc 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalPerc2.wav">Pascaal Perc 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Pascaal/PascaalPerc3.wav">Pascaal Perc 3</option>
+
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonKick1.wav">Tennyson Kick 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonKick2.wav">Tennyson Kick 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonTom1.wav">Tennyson Tom</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonSnare1.wav">Tennyson Snare 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonHat1.wav">Tennyson Hat 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonPerc1.wav">Tennyson Perc 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Tennyson/TennysonPerc2.wav">Tennyson Perc 2</option>
+
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverKick1.wav">Oliver Kick 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverKick2.wav">Oliver Kick 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverTamb1.wav">Oliver Tambourine</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverSnare1.wav">Oliver Snare 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverHat1.wav">Oliver Hat 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverHat2.wav">Oliver Hat 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverPerc1.wav">Oliver Perc 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverPerc2.wav">Oliver Perc 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Oliver/OliverPerc3.wav">Oliver Perc 3</option>
+
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoKick1.wav">Torres-Rengifo Kick 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoKick2.wav">Torres-Rengifo Kick 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoTom1.wav">Torres-Rengifo Tom</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoSnare1.wav">Torres-Rengifo Snare 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoHat1.wav">Torres-Rengifo Hat 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoPerc1.wav">Torres-Rengifo Perc 1</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoPerc2.wav">Torres-Rengifo Perc 2</option>
+  <option value="https://bowmansbucket.s3.amazonaws.com/Torres-Rengifo/Torres-RengifoRim1.wav">Torres-Rengifo Rim 1</option>
+
   {{#each oneShots as |oneShot|}}
     <option class="option" value={{oneShot.url}}>{{oneShot.title}}</option>
   {{/each}}
