Show chosen default sample instead of "choose"

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -537,6 +537,9 @@ label {
   .player {
     padding: 1em 0;
   }
+  .handlebar-oneShots {
+    margin: 0 auto;
+  }
 }
 
 // box-shadow: 3px 3px 7px rgba(15,15,15,0.8);
