--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,11 +23,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: belgrano, serif;
+  height: 100vh;
 }
 
 nav {
   overflow: hidden;
-  height: 5em;
+  height: 100%;
   background-color: $blue;
   position: fixed;
   top: 0;
@@ -37,7 +38,7 @@ nav {
 main {
   background-color: rgba(234, 221, 230, 1);
   margin-left: 250px;
-  height: 650px;
+  height: 100%;
 }
 
 p {
